# reimagined

./: .gitignore  README.md  package.json
cli/codegen/reim-codegen/: Cargo.toml
cli/codegen/reim-codegen/src/: main.rs
cli/codegen/reim-codegen/src/abi/: mod.rs
cli/codegen/reim-codegen/src/parse_schema/: mod.rs
cli/codegen/reim-codegen/test/in/: schema.graphql
cli/codegen/reim-codegen/test/templates/: function-wrapped.mustache
cli/codegen/reim-codegen/test/templates/internal-function/: serializeObject.mustache
cli/codegen/reim-wrapper-codegen/: Cargo.toml
cli/codegen/reim-wrapper-codegen/src/: lib.rs
cli/codegen/reim-wrapper-codegen/src/models/: mod.rs
cli/codegen/reim-wrapper-codegen/src/templates/: invokeWasmResource.ts.mustache  type.ts.mustache
cli/codegen/reim-wrapper-codegen/src/templates/assemblyscript/: method-invoke.ts.mustache
cli/codegen/reim-wrapper-codegen/src/templates/global-function/: args.ts.mustache  index.ts.mustache  serializeResult.ts.mustache
cli/codegen/reim-wrapper-codegen/src/templates/global-functions/: invokeGlobalFunction.ts.mustache
cli/codegen/reim-wrapper-codegen/src/templates/polywrap/: WrapManifest.ts.mustache  global-function-invoke.ts.mustache  method-invoke.ts.mustache
cli/codegen/reim-wrapper-codegen/src/templates/typescript/: global-function-invoke.ts.mustache  method-invoke.ts.mustache
cli/codegen/reim-wrapper-codegen/test/in/: schema.graphql
rust/: Cargo.toml
rust/app/: Cargo.toml
rust/app/src/: main.rs
rust/app/src/polywrap/external_references/: schema.graphql
rust/app/src/wrappers/external_references/: Cargo.toml  package.json
rust/app/src/wrappers/external_references/src/: lib.rs
rust/app/tests/: dt.rs  global_functions.rs  internal_wrap_module.rs  mock_test.rs
rust/app/tests/bindings/: mod.rs
rust/app/tests/bindings/global_functions/: mod.rs
rust/app/tests/bindings/global_functions/polywrap/: mod.rs  utils.rs
rust/app/tests/dt/: dt.rs
rust/app/tests/dt/dt_example/: Cargo.toml  Dockerfile  lol copy.txt  lol.txt  package.json
rust/app/tests/dt/dt_example/src/: lib.rs
rust/reim_cli/: Cargo.toml
rust/reim_cli/src/: main.rs
rust/reim_codegen/: Cargo.toml
rust/reim_codegen/src/: lib.rs
rust/reim_codegen/src/templates/assemblyscript/wrapped/: ExternalClassWrapped.ts.mustache  InternalClassWrapped.ts.mustache
rust/reim_codegen/src/templates/rust/: WrapManifest.rs.mustache  global-function-invoke.ts.mustache  global_function_invoke.rs.mustache  method-invoke.ts.mustache  method_invoke.rs.mustache
rust/reim_codegen/src/templates/rust/wrapped/: ExternalClassWrapped.rs.mustache  ExternalClassWrapped.ts.mustache  InternalClassWrapped.rs.mustache  index.rs.mustache
rust/reim_codegen/src/templates/typescript/: global-function-invoke.ts.mustache
rust/reim_codegen/src/templates/typescript/wrapped/: ExternalClassWrapped.ts.mustache  InternalClassWrapped.ts.mustache
rust/reim_codegen/test/in/: schema.graphql
rust/reim_dt/: Cargo.toml
rust/reim_dt/src/: dt_instance.rs  external_module.rs  internal_module.rs  lib.rs  on_receive_fn.rs
rust/reim_dt_async/: Cargo.toml
rust/reim_dt_async/src/: internal_module.rs  lib.rs
rust/reim_dt_wasm/: Cargo.toml
rust/reim_dt_wasm/src/: dt_instance.rs  error.rs
rust/reim_dt_wasm/src/wasm_runtime/: imports.rs  instance.rs
rust/reim_host_dt/: Cargo.toml
rust/reim_host_dt/src/: dt_module.rs  lib.rs  receiver.rs  wrapper_module.rs
rust/reim_host_dt_wasm/: Cargo.toml
rust/reim_host_dt_wasm/src/: dt_wasm_module.rs  lib.rs  utils.rs
rust/reim_host_dt_wasm/src/wasm_runtime/: imports.rs  instance.rs
rust/reim_wrap/: Cargo.toml
rust/reim_wrap/src/: external_module.rs  external_wrap_module.rs  internal_wrap_module.rs  lib.rs  wrapper_module.rs
rust/reim_wrap_wasm/: Cargo.toml
rust/reim_wrap_wasm/src/: host_wrap_module.rs  lib.rs  receive.rs  send.rs
rust/reim_wrapper_dt_wasm/: Cargo.toml
rust/reim_wrapper_dt_wasm/src/: host_module.rs  lib.rs  malloc.rs  receive.rs  wasm_receive.rs
rust/reim_wrapper_dt_wasm/tests/: dt.rs
rust/test_cases/wrappers/dt_example/: Cargo.toml  package.json  schema.graphql
rust/test_cases/wrappers/dt_example/src/polywrap/: exports.rs  mod.rs  (+1 more)
rust/test_cases/wrappers/external_references/: Cargo.toml
rust/test_cases/wrappers/global_functions/: Cargo.toml  package.json  schema.graphql
rust/test_cases/wrappers/global_functions/src/: lib.rs
rust/wrap_schema/reim_schema/: Cargo.toml
rust/wrap_schema/reim_schema/src/parse_schema/: functions.rs
rust/wrap_schema/tree_sitter_wrap/: grammar.js
rust/wrap_schema/tree_sitter_wrap/bindings/node/: binding.cc
rust/wrap_schema/tree_sitter_wrap/bindings/rust/: lib.rs
rust/wrap_schema/tree_sitter_wrap/corpus/: definitions.txt
rust/wrap_schema/tree_sitter_wrap/src/: grammar.json  node-types.json
(+211 files in other folders)
