[workspace]
members = [
    "wrap_schema/tree_sitter_wrap", 
    "wrap_schema/reim_schema",
    "reim_dt",
    "reim_host_dt",
    "reim_host_dt_wasm",
    "reim_wrapper_dt_wasm", 
    "reim_wrap", 
    "reim_codegen", 
    "reim_cli", 
    "app/src/wrappers/external_references",
    "app/tests/dt/dt_example",
    "app"
]