[workspace]
members = [
    "wrap_schema/tree_sitter_wrap", 
    "wrap_schema/reim_schema",
    "reim_dt",
    "reim_host_dt",
    "reim_host_dt_wasm",
    "reim_wrapper_dt_wasm", 
    "reim_wrap", 
    "reim_codegen", 
    "reim_cli", 
    "test_cases/wrappers/dt_example",
    "test_cases/wrappers/global_functions",
    "test_cases/wrappers/external_references",
    "app"
]