[package]
name = "reim_wrapper_dt_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
reim_dt = { path = "../reim_dt" }
futures = "0.3.25"
async-trait = "0.1.58"
[dev_dependencies]
tokio = { version = "1.22.0", features = ["rt", "macros"] }
reim_host_dt = { path = "../reim_host_dt" }
reim_host_dt_wasm = { path = "../reim_host_dt_wasm" }