[package]
name = "reim_wrapper_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mustache = "0.9.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
reim_schema = { path = "../../reim-schema" }
Inflector = "0.11.4"