[package]
name = "external_references_test"
version = "0.1.0"
description = ""
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
reim_wrapper_dt_wasm = { path = "../../../../reim_wrapper_dt_wasm" }
reim_dt = { path = "../../../../reim_dt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
async-trait = "0.1.58"
by_address = "1.1.0"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
