[package]
name = "dt_example"
version = "0.1.0"
description = ""
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
by_address = "1.1.0"
reim_wrapper_dt_wasm = { path = "../../../../reim_wrapper_dt_wasm" }
reim_dt = { path = "../../../../reim_dt" }

[lib]
crate-type = ["cdylib"]
name = "module"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
